--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -6,7 +6,7 @@
   <h2>Liste des emails <span class="badge bg-primary rounded-pill"><%= @emails.length %></span></h2> 
   <ul id="list" class="list-group">
   <%@emails.each do |email|%>
-    <li id="<%= email.id%>" class="list-group-item d-flex justify-content-between align-items-center list-group-item-action <%= 'unread' if email.read == false %>">
+    <li id="<%= email.id%>" onClick="myFunction();" class="list-group-item d-flex justify-content-between align-items-center list-group-item-action <%= 'unread' if email.read == false %>">
       <%=link_to "#{email.object}", email_path(email.id), remote: true %>
     </li>
   <% end %>
@@ -15,3 +15,14 @@
   <div id="email" class="col-md-8 border">
 <h2>Sélectionnez un email</h2>
 </div>
+
+
+<script>
+myFunction(){
+  var email = document.getElementById("email");
+  email.innerHTML = "<%= j render "show", email: email%>";
+
+  var liEl = document.getElementById("<%= @email.id %>");
+  liEl.classList.remove("unread")
+}
+</script>
