--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -22,7 +22,7 @@ myFunction(){
   var email = document.getElementById("email");
   email.innerHTML = "<%= j render "show", email: email%>";
 
-  var liEl = document.getElementById("<%= @email.id %>");
+  var liEl = document.getElementById("<%= email.id %>");
   liEl.classList.remove("unread")
 }
 </script>
